# check-it-out

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: sec_scan.yaml
src/: helper.py  main.py  templater.py
src/integrations/: fs.py  integration_interface.py
src/templates/: dependency-check.md  trivy.md
