[tool.poetry]
name = "format-out"
version = "0.1.0"
description = "Friendly way to format and display output messages from tools"
authors = ["Manoel Carvalho <manoelhc@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "format_out"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
pandoc = "^2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"


[tool.poetry.scripts]
run = 'format_out.src.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

